app/.kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: addict
    labels:
        app: addict
spec:
    replicas: 1
    selector:
        matchLabels:
            app: addict
    template:
        metadata:
            labels:
                app: addict
        spec:
            containers:
                - name: addict
                  image: makingsenseinfo/addict:0.5.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080
