app/.kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
    name: addict
spec:
    selector:
        app: addict
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
