app/.kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: addict
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: addict.example.com # Replace with your domain
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: addict
                            port:
                                number: 80
